频繁请求处理